@@ -4,6 +4,7 @@
 
 MovieJukebox 1.8 BETA
 ---------------------
+  - Fixed defect #1006 Wrong fanart file name if NFO <fanart> field filled in link  
   - Fixed defect #1187 Trailing '|' character in IMDB plots
   - Enhancement  #1188 Add support for Danish language tag in the filename
   - Fixed defect #1194 NFO fileinfo streamdetails are not overriding the MediaInfo scraped information
